1.新增 Fb message log 2.新增 line chatbot接口 3.新增 mongodb 儲存data

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -6,6 +6,6 @@ mongo.password=
 mongo.port=27017
 mongo.username=
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc\:mysql\://localhost\:3306/chatbottest
+database.url=jdbc\:mysql\://localhost\:3306/chatbottestt?useUnicode=true&characterEncoding=utf-8
 database.username=root
 database.password=root
