--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <aspectj.version>1.8.1</aspectj.version>
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <roo.version>1.3.3.BUILD-SNAPSHOT</roo.version>
+        <roo.version>1.3.2.RELEASE</roo.version>
         <slf4j.version>1.7.5</slf4j.version>
         <spring.version>4.0.9.RELEASE</spring.version>
     <tomcat.version>7.0.63</tomcat.version>
@@ -109,6 +109,11 @@
             <artifactId>org.springframework.roo.annotations</artifactId>
             <version>${roo.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.roo</groupId>
+            <artifactId>org.springframework.roo.addon.web.mvc.controller</artifactId>
+            <version>${roo.version}</version>
         </dependency>
         <!-- Spring dependencies -->
         <dependency>
@@ -289,12 +294,12 @@
         <dependency>
             <groupId>com.linecorp.bot</groupId>
             <artifactId>line-bot-api-client</artifactId>
-            <version>1.6.0</version>
+            <version>1.8.0</version>
         </dependency>
         <dependency>
             <groupId>com.linecorp.bot</groupId>
             <artifactId>line-bot-model</artifactId>
-            <version>1.6.0</version>
+            <version>1.8.0</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -304,7 +309,7 @@
         <dependency>
             <groupId>com.linecorp.bot</groupId>
             <artifactId>line-bot-servlet</artifactId>
-            <version>1.6.0</version>
+            <version>1.8.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.servlet</groupId>
@@ -339,6 +344,7 @@
             <artifactId>spring-beans</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
 
     </dependencies>
     <build>
