--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -2,10 +2,10 @@
 #Sat May 06 11:16:03 CST 2017
 mongo.database=chatterbot-database
 mongo.host=127.0.0.1
-mongo.password=
+mongo.password=root
 mongo.port=27017
-mongo.username=
+mongo.username=root
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc\:mysql\://localhost\:3306/chatbottest?useUnicode=true&characterEncoding=utf-8
+database.url=jdbc\:mysql\://localhost\:3306/chatbottest?useUnicode=true&characterEncoding=utf-8&max_allowed_packet=200000
 database.username=root
 database.password=root
