--- a/pom.xml
+++ b/pom.xml
@@ -338,6 +338,16 @@
             <artifactId>spring-data-mongodb</artifactId>
             <version>1.7.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.7.4.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
